package messages.input;

message Sensors {

    enum ServoID {
        R_SHOULDER_PITCH    = 0;
        L_SHOULDER_PITCH    = 1;
        R_SHOULDER_ROLL     = 2;
        L_SHOULDER_ROLL     = 3;
        R_ELBOW             = 4;
        L_ELBOW             = 5;
        R_HIP_YAW           = 6;
        L_HIP_YAW           = 7;
        R_HIP_ROLL          = 8;
        L_HIP_ROLL          = 9;
        R_HIP_PITCH         = 10;
        L_HIP_PITCH         = 11;
        R_KNEE              = 12;
        L_KNEE              = 13;
        R_ANKLE_PITCH       = 14;
        L_ANKLE_PITCH       = 15;
        R_ANKLE_ROLL        = 16;
        L_ANKLE_ROLL        = 17;
        HEAD_PAN            = 18;
        HEAD_TILT           = 19;
    }

    message Servo {
        required uint32 errorFlags = 1;

        required ServoID id = 2;

        optional bool enabled = 3;

        optional float pGain = 4;
        optional float iGain = 5;
        optional float dGain = 6;

        optional float goalPosition = 7;
        optional float movingSpeed = 8;
        optional float torqueLimit = 9;

        optional float presentPosition = 10;
        optional float presentSpeed = 11;

        optional float load = 12;
        optional float voltage = 13;
        optional float temperature = 14;
    }

    message Accelerometer {
        optional float x = 1;
        optional float y = 2;
        optional float z = 3;
    }

    message Gyroscope {
        optional float x = 1;
        optional float y = 2;
        optional float z = 3;
    }

    message FSR {
        optional float fsr1 = 1;
        optional float fsr2 = 2;
        optional float fsr3 = 3;
        optional float fsr4 = 4;

        optional float centreX = 5;
        optional float centreY = 6;
    }
}